--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <title>Template</title>
     <style>
-        /* Estilos CSS aqui */
-<<<<<<< HEAD
         body {
             display: flex;
             flex-direction: column;
@@ -12,6 +10,8 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
+            background-color: #ffdddd; /* Vermelho claro */
+            color: #000000; /* Preto */
         }
 
         h1 {
@@ -27,9 +27,12 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            background-color: #ffffff; /* Branco */
+            color: #000000; /* Preto */
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
         }
-=======
->>>>>>> e3fe56678c97cc9fb0e4d15becc1d51c8842c90d
     </style>
 </head>
 <body>
@@ -38,18 +41,13 @@
     <input type="radio" id="sim" name="opcoes" onclick="openURL()">
     <label for="nao">Não</label>
     <input type="radio" id="nao" name="opcoes" onclick="moveButton()">
-<<<<<<< HEAD
-
-=======
     
->>>>>>> e3fe56678c97cc9fb0e4d15becc1d51c8842c90d
     <script>
         function openURL() {
             window.location.href = "https://www.youtube.com/watch?v=XCWQyjHcNzA";
         }
 
         function moveButton() {
-<<<<<<< HEAD
             const button = document.getElementById("nao");
             const screenWidth = window.innerWidth;
             const screenHeight = window.innerHeight;
@@ -61,15 +59,7 @@
 
             button.style.left = randomX + "px";
             button.style.top = randomY + "px";
-=======
-            // Código para mover o botão "Não" para outra posição
->>>>>>> e3fe56678c97cc9fb0e4d15becc1d51c8842c90d
         }
     </script>
 </body>
 </html>
-<<<<<<< HEAD
-
-</html>
-=======
->>>>>>> e3fe56678c97cc9fb0e4d15becc1d51c8842c90d
