--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #ffdddd; /* Vermelho claro */
-            color: #000000; /* Preto */
         }
 
         h1 {
@@ -27,11 +25,6 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: #ffffff; /* Branco */
-            color: #000000; /* Preto */
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
         }
     </style>
 </head>
@@ -40,8 +33,8 @@
     <label for="sim">Sim</label>
     <input type="radio" id="sim" name="opcoes" onclick="openURL()">
     <label for="nao">Não</label>
-    <input type="radio" id="nao" name="opcoes" onclick="moveButton()">
-    
+    <input type="radio" id="nao" name="opcoes" onmouseover="moveButton()">
+
     <script>
         function openURL() {
             window.location.href = "https://www.youtube.com/watch?v=XCWQyjHcNzA";
