--- a/index.html
+++ b/index.html
@@ -17,21 +17,26 @@
         }
 
         .button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    }
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
 
-    .button-container button {
-        margin: 10px;
-        padding: 10px 20px;
-        background-color: lightgray;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
+        .button-container button {
+            margin: 10px;
+            padding: 10px 20px;
+            background-color: lightgray;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
 
         #nao:hover {
             animation: moveButton 2s infinite;
